--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -13,12 +13,14 @@
   <div id="container" class="containerstyle">
     <body>
         <nav id="navcol">
-            <ul id="navlist" style="list-style-type:none">
-                <li class="navitem">Home</li>
-                <li class="navitem">Contact</li>
-                <li class="navitem">Services</li>
-                <li class="navitem">About Us</li>
-            </ul>
+          <div class="listheader">Sales</div>
+          <div id="saleslist" class="navlistblock"></div>
+          <div class="listheader">Account</div>
+          <div id="accountlist" class="navlistblock"></div>
+          <div class="listheader">Vendors</div>
+          <div id="vendorlist" class="navlistblock"></div>
+          <div class="listheader">Help</div>
+          <div id="helplist" class="navlistblock"></div>
         </nav>
         <header>
           <div id="navcon" onclick="navBar()">
@@ -29,8 +31,8 @@
           <h1>test</h1>
           <h2>test</h2>
         </header>
-        <section class="section1">
-            test
+        <section id="sect" class="section1">
+
         </section>
     </body>
   </div>
