--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -8,11 +8,12 @@
     <script src="js/function.js"></script>
     <linkh ref="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>CHECKPINT 2</title>
   </head>
   <div id="container" class="containerstyle">
     <body>
         <nav id="navcol">
+          <div id="navtopbtn" onclick="navBar()"></div>
           <div class="listheader">Sales</div>
           <div id="saleslist" class="navlistblock"></div>
           <div class="listheader">Account</div>
@@ -23,13 +24,17 @@
           <div id="helplist" class="navlistblock"></div>
         </nav>
         <header>
-          <div id="navcon" onclick="navBar()">
+          <div class="navcon" onclick="navBar()">
             <div class="navbtn"></div>
             <div class="navbtn"></div>
             <div class="navbtn"></div>
           </div>
-          <h1>test</h1>
-          <h2>test</h2>
+          <h1>Company Name</h1>
+          <h2>Sales</h2>
+          <h2>Account</h2>
+          <h2>Vendors</h2>
+          <h2>Help</h2>
+          <h2>Login</h2>
         </header>
         <section id="sect" class="section1">
 
