worked on my resume

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="HandheldFriendly" content="true">
-  
+<link rel="stylesheet" href="../../01week/resume/css/style.css">
   
   <title>Amber Jones Resume</title>
 
@@ -16,14 +16,35 @@
   
   <header>
       <h1>Amber Jones</h1>
-    <h3>6307 Donely Pl, San Antonio, TX 78247
-    <br>
-    (210) 429-6474 
-    
+    <h3>Junior Developer </h3>
+    <p>(210) 429-6474 </p>
   </header>
-  <nav>
-      <link rel="stylesheet" href="../../01week/resume/css/style.css">
-  </nav>
+  <section>
+      <div id="section">
+        <a href= "http://www.paradiselawn.net/"> Paradise Lawn and Maintenance </a> 
+    
+        <p> Garden Ridge, Tx
+           - Office Manager - 
+        January 2017 - June 2017 </p>
+        <p>
+          <ul>
+            <li>Developed maximum productivity and revenue through staff development and sales. </li>
+            <li>Administered daily operations to ensure a positive work environment.</li>
+            <li>Oversaw opening and closing of operations including inventory control.</li>
+          </ul> 
+        </p>
+        <br>
+        <a href="https://www.clinique.com/">Clinique Laboratories</a>
+        <p> San Antonio, TX — Beauty Advisor
+        January 2017 - June 2017
+        </p>
+        <ul>
+          <li>Directed recruitment, training, and staff development. </li>
+          <li>Cultivated strong business relations with customers.</li>
+          <li>Planned and executed floor merchandising initiatives. </li>
+        </ul>
+        </div>
+    </section>
   <aside>
       <div id="sidebar">
         <h1>Education:</h1>
@@ -38,32 +59,7 @@
         </div>
   </aside>
   
-  <section>
-    <div id="section">
-      <a href= "http://www.paradiselawn.net/"> Paradise Lawn and Maintenance </a> 
   
-      <p> Garden Ridge, Tx
-         - Office Manager - 
-      January 2017 - June 2017 </p>
-      <p>
-        <ul>
-          <li>Developed maximum productivity and revenue through staff development and sales. </li>
-          <li>Administered daily operations to ensure a positive work environment.</li>
-          <li>Oversaw opening and closing of operations including inventory control.</li>
-        </ul> 
-      </p>
-      <br>
-      <a href="https://www.clinique.com/">Clinique Laboratories</a>
-      <p> San Antonio, TX — Beauty Advisor
-      January 2017 - June 2017
-      </p>
-      <ul>
-        <li>Directed recruitment, training, and staff development. </li>
-        <li>Cultivated strong business relations with customers.</li>
-        <li>Planned and executed floor merchandising initiatives. </li>
-      </ul>
-      </div>
-  </section>
   <article>
     <div id="articletable">
       <table>
