checkpoint two final

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,52 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Jamo's Portfolio</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/imgs/J.ico" />
+    <link href="https://fonts.googleapis.com/css?family=BenchNine|Montserrat|Nanum+Myeongjo|Prompt" rel="stylesheet">
+    <link rel="stylesheet" a href="./css/style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Jameson C Dettle</h1>
+            <h4>Communications Specialist<br>&<br>Web-Developer</h4>
+        </header>
+        <div class="border"></div>
+        <main class="portfolio">
+            <article class="category1"><span>Contact</span></article>
+            <article class="category2"><span>About</span></article>
+            <article class="category3"><span>Education</span></article>
+            <article class="category4"><span>Experience</span></article>
+            <article class="info1">
+                <p><img src="/imgs/closed-envelope-circle.png" height="20vw" width="20vw"> jamdettle@gmail.com</p>
+                <p><img src="/imgs/linkedin-letters.png"height="20vw" width="20vw"> Jameson Dettle</p>
+                <p> <img src="/imgs/smartphone-with-reload-arrows.png"height="20vw" width="20vw"> 850-865-2628</p>
+                <p> <img class="gh" src="/imgs/github-logo.png"height="20vw" width="20vw"> jamdettle</p>
+            </article>
+            <article class="info2">
+                <p>Seeking Web Developer work at ABC Company that allows for implementation of communication, service, and design skills to the programming essentials.</p>
+            </article>
+            <article class="info3">
+                <p> > <strong>Austin Coding Academy</strong></p>
+                <div>Proficient in:<strong>
+                <br>HTML / CSS<br>
+                JavaScript<br>
+                jQuery<br>
+                Responsive Web Design</strong>
+                </div>
+                <p class="fsuborder"><br> > <strong>Florida State University</strong></p>
+                <div>[<strong>Bachelor of Science</strong>] <br>-<strong>Professional Communication</strong>-<br>GPA 3.9 / 4.0 scale<br><br></div>
+            </article>
+            <article class="info4">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, eveniet iure labore, dolores aperiam repellendus alias iste, aliquid temporibus autem omnis incidunt inventore quae ea. Possimus eligendi corporis sed beatae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique voluptate earum voluptates sequi vitae, quasi doloremque voluptatibus quas adipisci suscipit esse nisi quos eum quidem minus, perferendis illo laborum sunt.</p>
+            </article>
+        </main>
+    </div>
+    <footer>
+    </footer>
+</body>
+</html>
