--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -8,20 +8,20 @@
     <script src="js/function.js"></script>
     <linkh ref="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css" />
-    <title>CHECKPINT 2</title>
+    <title>CHECKPOINT 2</title>
   </head>
   <div id="container" class="containerstyle">
     <body>
         <nav id="navcol">
-          <div id="navtopbtn" onclick="navBar()"></div>
+          <img src="pics/logo.PNG" class="logo" alt="" srcset="" onclick="navBar()">
           <div class="listheader">Sales</div>
-          <div id="saleslist" class="navlistblock"></div>
+          <div id="saleslist"></div>
           <div class="listheader">Account</div>
-          <div id="accountlist" class="navlistblock"></div>
+          <div id="accountlist"></div>
           <div class="listheader">Vendors</div>
-          <div id="vendorlist" class="navlistblock"></div>
+          <div id="vendorlist"></div>
           <div class="listheader">Help</div>
-          <div id="helplist" class="navlistblock"></div>
+          <div id="helplist"></div>
         </nav>
         <header>
           <div class="navcon" onclick="navBar()">
@@ -29,16 +29,21 @@
             <div class="navbtn"></div>
             <div class="navbtn"></div>
           </div>
-          <h1>Company Name</h1>
-          <h2>Sales</h2>
-          <h2>Account</h2>
-          <h2>Vendors</h2>
-          <h2>Help</h2>
+          <h1>Company Dashboard</h1>
           <h2>Login</h2>
         </header>
-        <section id="sect" class="section1">
-
+        <section class="section1 sect">
+          <img src="pics/chart1.png" class="chart" alt="" srcset="">
         </section>
+          <section class="section2 sect">
+            <img src="pics/chart2.png" class="chart" alt="" srcset="">
+          </section>
+          <section id="sect" class="section3 sect">
+            <img src="pics/chart3.png" class="chart" alt="" srcset="">
+          </section>
+          <section class="section4 sect">
+            <img src="pics/chart4.png" class="chart" alt="" srcset="">
+          </section>
     </body>
   </div>
 </html>
