--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,42 @@
 
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Petes Moving Company</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Warnes" rel="stylesheet">    
+</head>
+
+<!-- Body start here -->
+
+<body>
+    <div class="gridcontainer">
+        <div class = movingimage>
+        </div>
+        <div class= maintext >
+            Pete's Moving Company!
+        </div>
+        <div class= quotebutton>
+            <button class= quotebutton type="button"> Click here for<br>QUICK QUOTE
+            </button>
+        </div>
+        <div class= sideservices> 
+            Services
+        </div>
+        <div class= sideabout>
+            About Us
+        </div>
+        <div class= sidecontact>
+            Contact Us
+        </div>    
+        <div class= bottomtext>
+            Helping people move accross all 50 states for over 20 years!
+        </div>    
+    </div>
+</body>
+</html>
+
+
+
