--- a/checkpoint-two/pages/resume.html
+++ b/checkpoint-two/pages/resume.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet">
-    <title>Jim Schaefer</title>
+    <title>Resume</title>
 </head>
 <body>
     <nav class="grid">
         <h4>Jim Schaefer</h4>
-            <img class="mybigdumbface" src="images/headshot.jpg" />
+            <img class="mybigdumbface" src="../images/headshot.jpg" />
                 <div class="nav-wrapper">
-                    <div class="nav-item"><a class="about active" href="./index.html">Home</a></div>
-                    <div class="nav-item"><a class="resume" href="./pages/resume.html">Resume</a></div>
-                    <div class="nav-item"><a class="portfolio" href="./pages/portfolio.html">Portfolio</a></div>
-                    <div class="nav-item"><a class="contact" href="./pages/contact.html">Contact</a></div>
+                    <div class="nav-item"><a class="about" href="../index.html">Home</a></div>
+                    <div class="nav-item"><a class="resume active" href="./resume.html">Resume</a></div>
+                    <div class="nav-item"><a class="portfolio" href="./portfolio.html">Portfolio</a></div>
+                    <div class="nav-item"><a class="contact" href="./contact.html">Contact</a></div>
                 </div>
     </nav>
     <main>
-        <h1>About</h1>
+        <h1>Resume</h1>
             <div class="scrollbox">
                     <p>Lorem ipsum dolor amet hot chicken neutra beard viral microdosing pabst tattooed put a bird on it cornhole. Readymade street art wayfarers, ennui affogato tote bag whatever. Chicharrones distillery craft beer small batch, tbh man bun pour-over pinterest swag coloring book meh. Semiotics bushwick organic hashtag sustainable. Taiyaki hot chicken pinterest cardigan. XOXO swag gentrify cliche polaroid.</p>
 
@@ -36,4 +36,3 @@
     </main>
 </body>
 </html>
-  
