--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -14,13 +14,13 @@
     <body>
         <nav id="navcol">
           <img src="pics/logo.PNG" class="logo" alt="" srcset="" onclick="navBar()">
-          <div class="listheader">Sales</div>
+          <div id="listsales" class="listheader" onclick="listhead()">Sales</div>
           <div id="saleslist"></div>
-          <div class="listheader">Account</div>
+          <div id="listaccount" class="listheader" onclick="listhead()">Account</div>
           <div id="accountlist"></div>
-          <div class="listheader">Vendors</div>
+          <div id="listvendors" class="listheader" onclick="listhead()">Vendors</div>
           <div id="vendorlist"></div>
-          <div class="listheader">Help</div>
+          <div id="listhelp" class="listheader" onclick="listhead()">Help</div>
           <div id="helplist"></div>
         </nav>
         <header>
@@ -29,20 +29,26 @@
             <div class="navbtn"></div>
             <div class="navbtn"></div>
           </div>
-          <h1>Company Dashboard</h1>
+          <h1 id="h1" onclick="listhead()">Dashboard</h1>
+          <h2 id="topnav">Home</h2>
           <h2>Login</h2>
         </header>
+        <section id="home">
+          <div id="home1" class="homeintro">WELCOME</div>
+          <div id="home2" class="homeintro">to your</div>
+          <div id="home3" class="homeintro">Company Dashboard</div>
+        </section>
         <section class="section1 sect">
-          <img src="pics/chart1.png" class="chart" alt="" srcset="">
+          <img src="pics/chart1.png" class="chart">
         </section>
           <section class="section2 sect">
-            <img src="pics/chart2.png" class="chart" alt="" srcset="">
+            <img src="pics/chart2.png" class="chart">
           </section>
-          <section id="sect" class="section3 sect">
-            <img src="pics/chart3.png" class="chart" alt="" srcset="">
+          <section class="section3 sect">
+            <img src="pics/chart3.png" class="chart">
           </section>
           <section class="section4 sect">
-            <img src="pics/chart4.png" class="chart" alt="" srcset="">
+            <img src="pics/chart4.png" class="chart">
           </section>
     </body>
   </div>
