--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,108 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>A Page for Andrew</title>
+    
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+  
+</head>
+<body>
+    <div class="container box">
+        <header>
+            <h1>Andrew Sommer</h1>
+            <p>The web developer for YOU!</p>
+            <div class="header_buttons">
+                <button class="fa fa-linkedin"><a href="https://www.linkedin.com/in/andrew-sommer/"></a></button>'
+                <button class="fa fa-github"><a href="https://github.com/AndrewSommer89"></a></button>
+            </div>
+        </header>
+                    <div class="box right" id="about_me">
+                        <h2>Allow Me To Introduce Myself...</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis corrupti iure provident. Veritatis, magni vero in delectus quia molestiae autem ab minus iusto laudantium placeat magnam tempore explicabo, esse voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores natus magni expedita asperiores repellendus quae fuga amet error optio minus veritatis, obcaecati quaerat odio cupiditate minima? Modi unde corporis aperiam?</p>
+                    </div>
+                    <div class="box left" id="education">
+                        <h2 class="box">Education</h2>
+                        <p><i class="fa fa-laptop"></i><span> Austin Coding Academy</span> | October 2018 - July 2019</p>
+                        <p><i class="fa fa-graduation-cap"></i><span> Maryville University of St.Louis</span> | Gradutated 2014</p>
+                        <p> B.A. Criminal Justice</p>
+                    </div>
+                    <div class="box right" id="work">
+                        <h2>Work Experience</h2> 
+                        <div class="mcm_law">
+                            <p class="employer box">MCM Law, St. Louis, MO | September 2017 - September 2018</p>
+                            <p class="position">Legal Assitant | 2017 - 2018</p>
+                            <p>The right hand man to the head attorney of the firm.  Proofread legal documents to make sure there were no mistakes.  During tax season, helped prepare tax returns and get the correct documents from the clients.  Prepared legal documents.  Was often times a middle man between the client and the attorney.  Run day to day operations of the office.</p>
+                            <ul class="box work_list">
+                                <li>Aid head attorney</li>
+                                <li>Prepare tax documents</li>
+                                <li>Prepare legal documents for clients and attorney</li>
+                                <li>Organize records and provide expense reports</li>
+                                <li>Handle condifential information</li>
+                            </ul>
+                        </div>
+                        <div class="TQL box">
+                            <p class="box employer">Total Qualityu Logistics, St. Louis, MO | Septepmber 2016 - September 2017</p>
+                            <p class="box position">Account Executive | 2016 - 2017</p>
+                            <p>Manage the shipping and receiving of businesses nationwide.  Call prospects and cycle through the sales cycle to qualify, assess and close customers. Work to uncover prospects and customers’ needs to develop solutions to ensure needs were met.  Schedule trucks to pick up and deliver product within specified time frame. Act as person liaison between customers and carriers.</p>
+                            <ul class= "box work_list">
+                                <li>Customers one point of contanct within Total Quality Logistics</li>
+                                <li>Make between 80-100 calls to qualify, access, develop solutions and close customers</li>
+                                <li>On call 24/7 to clients' needs</li>
+                                <li>Consistently met and surpassed company wide effort and revenue goals</li>
+                            </ul>
+                        </div>
+                        <div class="deweys box">
+                            <p class="employer box">Dewey's Pizza, St. Louis, MO | June 2010 - September 2016</p>
+                            <p class= "position box">Kitchen Manager | 2014-2016</p>
+                            <p>Manage kitchen operations for two fast-paced, dine-in/carry-out gourmet pizza restaurants, each seating 50+ guests and together generating $1 million in annual sales volume. Monitor inventory levels; order food and supplies. Schedule and supervise 8 team members engaged in food preparation, dishwashing and shift organization activities. <br> Assure appropriate staffing and adherence to sanitation, safety, portion control, loss prevention and productivity standards. Expedite food production to enhance customer service and satisfaction. As indicated, arrange equipment preventive maintenance and repair.</p>
+                            <ul class="box work_list">
+                                <li>Train new hires in food preparation, sanitation, safety, standard and procedures</li>
+                                <li>Routinely achieve 15-minute service goal with largely teenage, part-time work crew</li>
+                                <li>Accommodated significant sales increases without adding headcount</li>
+                                <li>Commended by General Manager for personal productivity and work ethic</li>
+                            </ul>
+                            <p class="position box">Server/Production Crew | 2010-2014</p>
+                            <p>Held rotating front-of-the-house and back-of-the-house roles. Assembled meal orders, engaged patrons in conversation to create a friendly atmosphere and promoted beverages to build sales. Consistently met or surpassed production and sales goals</p>
+                        </div>
+                    </div>
+                    <div class="box left" id="skills">
+                        <h2>Skills</h2>
+                        <ul class="box skills_list">
+                            <li>One Skill</li>
+                            <li>Two Skill</li>
+                            <li>Three Skill</li>
+                            <li>Four Skill</li>
+                            <li>Five Skill</li>
+                            <li>Six Skill</li>
+                            <li>Seven Skill</li>
+                            <li>Eight Skill</li>
+                            <li>Nine Skill</li>
+                            <li>Ten Skill</li>
+                        </ul>
+                    </div>
+                    <div class="box left" id="projects">
+                        <h2>Projects</h2>
+                        <ul class="box project_list">
+                            <li><a href="dummy">Project One</a></li>
+                            <li><a href="dummy">Project Two</a></li>
+                            <li><a href="dummy">Project Three</a></li>
+                        </ul>
+                    </div>
+                    <div class="box left" id="contact">
+                        <h2>Contact</h2>
+                        <p><span><i class="fa fa-phone"></i></span> | 314.368.0630</p>
+                        <p><span><i class="fa fa-envelope"></i></span> | andrew.conrad.sommer@gmail.com</p>
+                        <p><span><i class="fa fa-home"></i></span> | 4505 Duval Street, Austin, TX, 78751</p>
+                        <div class="contact_buttons box">
+                            <button class="fa fa-linkedin"><a href="https://www.linkedin.com/in/andrew-sommer/"></a></button>
+                            <button class="fa fa-github"><a href="https://github.com/AndrewSommer89"></a></button>
+                        </div>
+                    </div>
+    </div>
+</body>
+</html>
