--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -12,6 +12,7 @@
   </head>
   <div id="container" class="containerstyle">
     <body>
+        <!-- Side navigation column -->
         <nav id="navcol">
           <img src="pics/logo.PNG" class="logo" alt="" srcset="" onclick="navBar()">
           <div id="listsales" class="listheader" onclick="listhead()">Sales</div>
@@ -23,22 +24,29 @@
           <div id="listhelp" class="listheader" onclick="listhead()">Help</div>
           <div id="helplist"></div>
         </nav>
+
         <header>
+          <!-- Hamburger style button -->
           <div class="navcon" onclick="navBar()">
             <div class="navbtn"></div>
             <div class="navbtn"></div>
             <div class="navbtn"></div>
           </div>
+          <!-- Top navigation bar -->
           <h1 id="h1" onclick="listhead()">Dashboard</h1>
           <h2 id="topnav">Home</h2>
           <h2>Login</h2>
         </header>
+
+        <!-- Text on home page -->
         <section id="home">
           <div id="home1" class="homeintro">WELCOME</div>
           <div id="home2" class="homeintro">to your</div>
           <div id="home3" class="homeintro">Company Dashboard</div>
         </section>
-        <section class="section1 sect">
+        
+        <!-- These sections hold pictures -->
+        <section id="section1id" class="section1 sect">
           <img src="pics/chart1.png" class="chart">
         </section>
           <section class="section2 sect">
@@ -50,6 +58,7 @@
           <section class="section4 sect">
             <img src="pics/chart4.png" class="chart">
           </section>
+
     </body>
   </div>
 </html>
