--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Angel Readings</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="C:\Users\Madeline\Documents\web-workbook\checkpoint-one\css\style.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <header>
+    <div class="nav">
+    <a class="active" href="#home">Home</a>
+    <a href="#readings">Readings</a>
+    <a href="#donate">Donate</a>
+    <a href="#about">About</a>
+    </div>
+    </header>
+
+<div id="block">Guidance requires exploration.</div>
+<img class=angelimg id="angelimg" src="angel_healing_light.jpg">
+<div id="block2">Have you found your Angel? Let our mediums connect you to your Guardian Angel.</div>
+<div id="block3">
+    Soon there will be an ennobling of beauty the likes of which the galaxy has never seen. Your life will be filled with light and purpose.
+</div>
+
+</body>
+</html>
