--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -5,12 +5,67 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Juan's Resume</title>
   <link rel="stylesheet" href="./css/style.css">
+  <style>
+    h1 {
+      color: red;
+    }
+  </style>
 </head>
 <body>
-  <header>this is a header</header>
-  <nav>this is a nav</nav>
-  <section>this is a section</section>
-  <article>this is a article</article>
-  <footer>this is a footer</footer>
+  <p class="container blue">
+    <nav>
+      <p>
+        <img src="logo" alt="">
+      </p>
+      <p>
+        <ul>
+          <li class="blue">Home</li>
+          <li>about</li>
+          <li>contact</li>
+        </ul>
+      </p>
+    </nav>
+    <section>
+      <p>
+        <img src="" alt="">
+      </p>
+      <div>
+        <h1 class="blue">Juan Rod</h1>
+        <h3>Front End Developer</h3>
+        <div class="social">
+          <ul>
+            <li> 
+              <img src="twitter" alt="">
+            </li>
+            <li> 
+                <img src="twitter" alt="">
+              </li>
+              <li> 
+                  <img src="twitter" alt="">
+                </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <div>
+          <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+    </section>
+    <footer></footer>
+  </div>
 </body>
 </html>
