--- a/02week/site/index.html
+++ b/02week/site/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../site/css/style.css">
 </head>
 <body>
-  <nav class="border-red">
+  <!-- <nav class="border-red">
     <div class="logo border-blue">
       <i class="fa fa-lg fa-grav"></i>
       </div>
@@ -19,11 +19,18 @@
       </ul>
     
       
-  </nav>
-    <header class="border-red">I'm a header</header>
-    <section class="border-red">Section 1</section>
-    <section class="border-red">Section 2</section>
-    <section class="border-red">Section 3</section>
+  </nav> -->
+    <header class="border-red">
+    <!-- <section class="border-white firstSection">Section </section>
+    <section class="border-white secondSection">Section </section>
+    <section class="border-white thirdSection">Section </section> -->
+    <div class="header_title">
+      <div class="parent_h1">
+      <h1>The Mars Coffee Shop</h1>
+      </div>
+      <h6>Out of this world cup of joe</h6>
+    </div>
+    </header>
   
     <footer></footer>
 
