--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,26 @@
-
+<!doctype   <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Transitions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+    <main>
+        <div class="abox a"></div>
+        <div class="bbox b"></div>
+        <div class="abox c"></div>
+        <div class="bbox d"></div>
+        <div class="abox e"></div>
+        <div class="bbox f"></div>
+        <div class="abox g"></div>
+        <div class="bbox h"></div>
+        <div class="abox e"></div>
+        <div class="bbox j"></div>
+        <div class="abox k"></div>
+        <div class="bbox l"></div>
+    </main>
+</body>
+</html>
