--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet"  href="css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="main.js"></script>
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="_blank">HOME</a>
+            <a href="_blank">ABOUT</a>
+            <a href="_blank">PROJECTS</a>
+            <a href="./images/Raul Gracia_Resume.pdf">RESUME</a>
+            <a href="_blank">ARTICLES</a>
+            <a href="_blank">CONTACT</a>
+        </nav>
+        <div>This is <a class="Leo">Leo</a>
+        <br>JavaScript Developer, Mechanic, Guru</div>
+    </header>
+    <main>
+        <section class="titles">ABOUT</section>
+            <p>I am a front-end and back-end developer-in-training who is a goal driven individual. Preplanning and foreshadowing are my forte, along with the constant desire for learning. I have a strong mindset and in the near future I will be able to desipher your code, take control and make it my ...!</p>
+            <img class="leoPic" src="./images/Leo_pic.jpg">
 
+        <section class="titles">PROJECTS</section>
+            <div class="projs">
+            <ul>
+                <li><img class="Proj1" src="./images/proj1"></li>
+                <li><img class="Proj1" src="./images/homework.jpg"></li>
+                <li><img class="Proj1" src="./images/media-query-exercise-laptop.jpg"></li>
+                <li><img class="Proj1" src="./images/responsive-laptop.jpg"></li>
+                <li><img class="Proj1" src="./images/wireframe.png"></li>
+            </ul>
+            </div>
+
+        <section class="titles">CONTACT</section>
+                <div class="contact">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-pinterest"></a>
+                </div>
+            </section>
+        </main>  
+    </body>
+    <footer>2018 Created by Leo Gracia</footer>
+</body>
+</html>
