created new airplane css changes and began the html format

--- a/02week/site/index.html
+++ b/02week/site/index.html
@@ -17,11 +17,17 @@
            <li class="border-green">Link 2</li>
            <li class="border-green">Link 3</li>
        </ul>
-   </nav>
-   <header class="border-red">im a header</header>
-   <section class="border-red">section 1</section> 
-   <section class="border-blue">section 2</section> 
-   <section class="border-green">section 3</section>
+   </nav> 
+   <header class="border-red">im a header
+       <!-- <section class="border-pink firstSection">section 1</section> 
+       <section class="border-blue secondSection">section 2</section> 
+       <section class="border-green thirdSection">section 3</section>
+       <section class="border-green thirdSection">section 4</section> -->
+   <div class="header___title">
+            <h1 class="border-green">The Mars Coffee Shop</h1> 
+            <h6 class="border-green"> Out of this world cup of joe</h6>
+   </div>             
+   </header>
    <footer>im a footer</footer> 
 </body>
 </html>
