revised airplane background settings in css

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <header>
-    <img src="./img/logo.png" alt="">
+    <img class="mainLogo" src="./img/logo.png" alt="">
+
     <nav class="headerNav">
     <img src="./img/home-icon.png" alt="">
     <a class="navLink" href="/">Home</a>
