forgot to push bio after tuesday

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -17,18 +17,32 @@
         </li>
         <li>
           <img src="img/deal-icon.png" alt="deal-icon">
-          <p>home</p>
+          <p>Travel Deals</p>
         </li>
         <li>
           <img src="img/schedule-icon.png" alt="schedule-icon">
-          <p>home</p>
+          <p>Flight Schedule</p>
         </li>
         <li>
             <img src="img/login-icon.png" alt="login-icon">
-            <p>home</p>
+            <p>Register/Login</p>
           </li>
       </ul>
     </nav>
   </header>
+  <main>
+    <div class="toprow">
+      <div class="toprowleft">
+      <img class="toprowleft" img src="../airplane/img/plane-icon.png">
+      </div>
+      <div class="toprowright">
+      <img class="toprowright" img src="../airplane/img/hotel-icon.png">
+      <img class="toprowright" img src="../airplane/img/car-icon.png">
+      </div>
+    </div>
+    <section></section>
+    <section></section>
+    <article></article>
+  </main>
 </body>
 </html>
